# multi-timer-manager

./: .gitattributes  .gitignore  LICENSE  README.md  hello.py  pyproject.toml  pytest.ini  requirements.txt
docs/: README_tests.md
src/: multi-timer-manager.py
src/multi_timer_manager.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_multi_timer_manager.py
