[project]
name = "multi-timer-manager"
version = "0.1.0"
description = "A Streamlit web application for managing multiple timers with notifications, tags, history tracking, and data visualization."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib",
    "pandas",
    "pytest",
    "simpleaudio",
    "streamlit",
    "streamlit-tags",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.1.2",
]

