[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-timer-manager"
version = "0.1.0"
description = "A multi-timer manager application."
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "topogoogles", email = "araujoagustin@gmail.com" }
]
license = { file = "LICENSE" }
dependencies = [
    "streamlit>=1.31",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "streamlit-tags>=1.2",
    "pytest>=8.3",
    "simpleaudio>=1.0",
    "pluggy>=1.5",
    "iniconfig>=2.0"
]
